chore: cancel adapter mode
